<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profileTitle" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="پیام ها" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mapTitle" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="لیست" />
    </group>

    <item android:title="@string/servicetitle">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_show_loc"
                android:title="@string/voterFinder_text" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/voters_finder_text" />
        </menu>
    </item>

</menu>
